src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_huber_loss_out(value out, value self, value target, int64_t reduction, double delta);
value atg_hypot(value self, value other);
value atg_hypot_(value self, value other);
value atg_hypot_out(value out, value self, value other);
value atg_i0(value self);
value atg_i0_(value self);
value atg_i0_out(value out, value self);
value atg_igamma(value self, value other);
value atg_igamma_(value self, value other);
value atg_igamma_out(value out, value self, value other);
value atg_igammac(value self, value other);
value atg_igammac_(value self, value other);
value atg_igammac_out(value out, value self, value other);
value atg_im2col(value self, value kernel_size, value dilation, value padding, value stride);
value atg_im2col_out(value out, value self, value kernel_size, value dilation, value padding, value stride);
value atg_imag(value self);
value atg_index_add(value self, int64_t dim, value index, value source, value alpha);
value atg_index_add_(value self, int64_t dim, value index, value source, value alpha);
value atg_index_add_out(value out, value self, int64_t dim, value index, value source, value alpha);
value atg_index_copy(value self, int64_t dim, value index, value source);
value atg_index_copy_(value self, int64_t dim, value index, value source);
value atg_index_copy_out(value out, value self, int64_t dim, value index, value source);
value atg_index_fill(value self, int64_t dim, value index, value value_);
value atg_index_fill_(value self, int64_t dim, value index, value value_);