src/bindings/torch_bindings_generated3.ml


  let stubs_huber_loss_out =
    foreign
      "atg_huber_loss_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs_hypot = foreign "atg_hypot" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_hypot_ =
    foreign "atg_hypot_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_hypot_out =
    foreign
      "atg_hypot_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_i0 = foreign "atg_i0" (gc_tensor @-> returning raw_tensor)
  let stubs_i0_ = foreign "atg_i0_" (gc_tensor @-> returning raw_tensor)

  let stubs_i0_out =
    foreign "atg_i0_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_igamma =
    foreign "atg_igamma" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_igamma_ =
    foreign "atg_igamma_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_igamma_out =
    foreign
      "atg_igamma_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_igammac =
    foreign "atg_igammac" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_igammac_ =
    foreign "atg_igammac_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_igammac_out =
    foreign
      "atg_igammac_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_im2col =
    foreign
      "atg_im2col"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_im2col_out =
    foreign
      "atg_im2col_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_imag = foreign "atg_imag" (gc_tensor @-> returning raw_tensor)

  let stubs_index_add =
    foreign
      "atg_index_add"
      (gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_index_add_ =
    foreign
      "atg_index_add_"
      (gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_index_add_out =
    foreign
      "atg_index_add_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_index_copy =
    foreign
      "atg_index_copy"
      (gc_tensor @-> int64_t @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_index_copy_ =
    foreign
      "atg_index_copy_"
      (gc_tensor @-> int64_t @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_index_copy_out =
    foreign
      "atg_index_copy_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_index_fill =
    foreign
      "atg_index_fill"
      (gc_tensor @-> int64_t @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_index_fill_ =
    foreign
      "atg_index_fill_"
      (gc_tensor @-> int64_t @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;
end

module C (F : Cstubs.FOREIGN) = struct
  include C0 (F)
  include C1 (F)
  include C2 (F)
  include C3 (F)
end
